# isleward

./: .env.coolify.example  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.client  docker-compose.coolify.yml  docker-compose.yml  package.json
docs/: COOLIFY.md  dialogues.md
docs/autoDocs/: scanClientToClient.js  scanClientToServer.js  scanMapToMapThread.js  scanServerToClient.js
docs/autoDocs/output/: clientToClient.txt  clientToServer.txt  mapToMapThread.txt  serverToClient.txt
docs/mapThreadEvents/: beforeGatherResourceComplete.md
src/: package-lock.json  package.json  rust-server.Dockerfile
src/client/: .gitignore  eslint.config.mjs  index.html  manifest.json  nginx.isleward.conf  package-lock.json  package.json  vite.config.js
src/client/css/: loader.less  main.less
src/client/images/: bosses.pyxel  materials.pyxel
src/client/js/: main.js
src/client/public/: app.json
src/client/src/: envConfig.js  main.jsx
src/client/ui/: factory.js  uiBase.js
src/client/vitePlugins/: buildModAudio.js  buildModComponents.js  buildModImages.js  buildModModules.js  buildModUis.js
src/rust-modules/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
src/rust-modules/npm/darwin-x64/: README.md  package.json
src/rust-modules/npm/linux-x64-gnu/: README.md  package.json
src/rust-modules/npm/win32-x64-msvc/: README.md  package.json
src/rust-modules/src/: lib.rs
src/rust-server/: Cargo.toml  Dockerfile  README.md
src/rust-server/src/: main.rs  ws_proxy.rs
src/server/: .eslintrc  eslint.config.mjs  globals.js  index.js  package-lock.json  package.json
src/server/clientComponents/: effects.js  inventory.js  player.js  resourceNode.js  serverActions.js  stats.js
src/server/combat/: combat.js  mitigate.js  scale.js
src/server/components/: aggro.js  auth.js  chatter.js  components.js  effects.js  equipment.js  follower.js  gatherer.js  inventory.js  mob.js  notice.js  passives.js  player.js  quests.js  resourceNode.js  social.js  sound.js  spellbook.js  stash.js  stats.js  trade.js  wardrobe.js
src/server/config/: balance.js  clientConfig.js  consts.js  herbs.js  itemConfig.js  passiveTree.js  serverConfig.js  slotTranslations.js  spells.js  spellsConfig.js  statTranslations.js  translations.js  zoneBase.js
src/server/db/: ioRethink.js  tableNames.js
src/server/events/: events.js
src/server/fixes/: fixes.js
src/server/items/: generator.js
src/server/misc/: fileLister.js  helpers.js  messages.js  mods.js  rewardGenerator.js
(+345 files in other folders)
