[package]
edition = "2021"
name = "rust-modules"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "1.3.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
petgraph = "0.6.5"
tracing = "0.1.40"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
