[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
axum = { version = "0.7.5", features = ["http2", "tracing", "ws"] }
futures-util = "0.3.30"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "time", "tracing"] }
tokio-tungstenite = "0.21.0"
tokio-util = { version = "0.7.11", features = ["io"] }
tower = { version = "0.4.13", features = ["tokio", "tracing"] }
tower-http = { version = "0.5.2", features = ["compression-gzip", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
