[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["http2", "tracing", "ws"] }
futures = { version = "0.3.31", optional = true }
hyper = { version = "1.5.0", features = ["http2", "http1", "server"], optional = true }
mime_guess = "2.0.5"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "tracing"] }
tokio-tungstenite = { version = "0.24.0", optional = true }
tower = { version = "0.5", features = ["tokio", "tracing"] }
tower-http = { version = "0.6", features = ["compression-gzip", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tungstenite = { version = "0.24.0", optional = true }
walkdir = "2.5.0"

[features]
tokio-tungstenite = ["dep:tokio-tungstenite"]
tungstenite = ["dep:tungstenite"]
futures = ["dep:futures"]
axum-ws = ["axum/ws"]
ws-proxy = ["futures","tungstenite","tokio-tungstenite","axum-ws"]
compile-less = []
production = ["compile-less"]